<resources>
    <string name="app_name">UbiTrack</string>
    <string name="todo">TODO</string>
    <string name="welcome_to">Welcome to</string>
    <string name="recruiting_team">Recruiting Team: </string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="not_disclosed">Not disclosed</string>
    <string name="what_s_your_gender">What is your gender?</string>
    <string name="emoji">Thanks for your support &#x270C;</string>

    <string name="accept_location">In order to provide you with information about your smartphone usage habits we need you to accept location tracking below: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subMessage">Ready to learn about your smartphone habits?</string>
    <string name="welcome">Get Started</string>
    <string name="question_1">Which team recruited you?</string>
    <string name="question_2">What\'s your age?</string>
    <string name="question_3">What type of chart would you like to see?</string>
    <string name="question_4">Once you click NEXT button, you will be transferred to "App Info"  permissions, where you need to enable:\n\u2022 Location\n\u2022 Physical Activity\n\u2022 FullScreen mode\n</string>
    <string name="next_btn">Next</string>
    <string name="device_info">Device Info </string>
    <string name="age_range">Age Range: </string>
    <string name="device_id">Device Id: </string>
    <string name="delete_msg">Do you wish to remove your device and your data?</string>
    <string name="remove_device">Remove Device</string>
    <string name="gender">Gender: </string>

    <string name="track">Track Activity</string>
    <string name="percentage">%1$d%%</string>
    <string name="bicycle">On a bicycle</string>
    <string name="foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown_activity">Unknown activity</string>
    <string name="vehicle">In a vehicle</string>
    <string name="walking">Walking</string>
    <string name="thanks_for_your_support">Thanks for your support</string>
    <string name="on"><font fgcolor="#000000">ON</font></string>
    <string name="off"><font fgcolor="#000000">OFF</font></string>
</resources>
