<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="183dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:contentDescription=""
        android:src="@drawable/_44ad2cf3d3f4ad7923ea92b082b89af"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_44ad2cf3d3f4ad7923ea92b082b89af" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/general_info"
        android:textSize="20sp"
        android:textStyle="bold" />
    <!--        android:layout_marginLeft="50dp"-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/recruiting_team"
        android:layout_marginLeft="5dp"
        android:textColor="#2FCC76"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:text="@string/age_range"
        android:textColor="#2FCC76"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:text="Gender"
        android:textColor="#2FCC76"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="5dp"
        android:text="@string/device_id"
        android:textColor="#2FCC76"
        android:textSize="18sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/delete_msg"
        android:textSize="18sp"
        android:textStyle="normal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/remove_device"
        android:textSize="12sp"
        android:textStyle="bold"
        app:backgroundTint="#FF0000" />

</LinearLayout>