<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFB"
    tools:context=".activity_get_started_3">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="244dp"
        android:layout_height="224dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/_44ad2cf3d3f4ad7923ea92b082b89af"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_44ad2cf3d3f4ad7923ea92b082b89af"
        tools:srcCompat="@drawable/_44ad2cf3d3f4ad7923ea92b082b89af" />

    <TextView
        android:id="@+id/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/what_s_your_gender"
        android:textColor="#2FCC76"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.133" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="141dp"
        android:layout_height="212dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/maleRB"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/male"
            android:textColor="#2FCC76"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/femaleRB"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/female"
            android:textColor="#2FCC76"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/otherRB"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/other"
            android:textColor="#2FCC76"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/notDisclosedRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/not_disclosed"
            android:textColor="#2FCC76"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:shadowColor="#FFFFFF"
        android:text="Next"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#2FCC76"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.859" />


</androidx.constraintlayout.widget.ConstraintLayout>