<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#FBFBFB"
    tools:context=".SecondRegisterPage"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="173dp"
        android:layout_height="139dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:src="@drawable/_44ad2cf3d3f4ad7923ea92b082b89af"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_44ad2cf3d3f4ad7923ea92b082b89af"
        tools:srcCompat="@drawable/_44ad2cf3d3f4ad7923ea92b082b89af" />

    <TextView
        android:id="@+id/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/what_s_your_gender"
        android:textColor="#2FCC76"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.133" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="141dp"
        android:layout_height="212dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/maleRB"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/male"
            android:textColor="#2FCC76"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/femaleRB"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/female"
            android:textColor="#2FCC76"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/otherRB"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/other"
            android:textColor="#2FCC76"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/notDisclosedRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/not_disclosed"
            android:textColor="#2FCC76"
            android:textStyle="bold" />
    </RadioGroup>




    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/next_btn"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_gravity="right"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        app:backgroundTint="#2FCC76"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission"
        app:layout_constraintVertical_bias="0.859" />

    <TextView
        android:id="@+id/tv_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/question_4"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_baseline_warning_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />



</LinearLayout>